refactor: bettingTable for loop로 변경